--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/cta.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/cta.html
@@ -1,28 +1,23 @@
-this is sample CTA Button
-
 <sly data-sly-use.cta="coe.core.models.CTAButton">
-    "${cta.componentId}"<Br>
-    "${cta.uniqueClassName}"<Br>
-    "${cta.ariaLabel}"<Br>
-    "${cta.function}"<Br>
-    "${cta.appearance}"<Br>
-    "${cta.alignment}"<Br>
-    "${cta.buttonText}"<Br> 
-    "${cta.modalID}"<Br>
-    "${cta.targetUrl}"<Br>
-    "${cta.target}"<Br>
-    "${cta.iconClass}"<Br>
+	<div id="${cta.componentId}" class="coe-cta-button ${cta.uniqueClassName} ${cta.alignment} ${cta.appearance}">
+		<sly data-sly-test.onclick = "return(modalTrigger('${cta.modalID}'))"/>
+		<a href="${cta.targetUrl}" target="${cta.target}" onclick="${cta.function == 'trigger' ? onclick : '' @ context ='html'}">
+			${cta.buttonText}
+			<sly data-sly-test="${cta.appearance == 'icon'}">
+				<span class="${cta.iconClass}"></span>
+			</sly>
 
-    "${properties.componentId}"<Br>
-    "${properties.uniqueClassName}"<Br>
-    "${properties.ariaLabel}"<Br>
-    "${properties.function}"<Br>
-    "${properties.appearance}"<Br>
-    "${properties.alignment}"<Br>
-    "${properties.buttonText}"<Br>
-    "${properties.modalID}"<Br>
-    "${properties.targetUrl}"<Br>
-    "${properties.target}"<Br>
-    "${properties.iconClass}"<Br>
+			<sly data-sly-test="${properties.buttonIcon}">
+				<span class="${properties.buttonIcon}"></span>
+			</sly>
+			<sly data-sly-test="${cta.ariaLabel}"><span class="sr-only">${cta.ariaLabel}</span></sly>
+		</a>
+	</div>
 </sly>
-
+<script>
+	function modalTrigger(compId)
+	{
+		alert(compId);
+		return false;
+	}
+</script>
