--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/cta.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/cta.html
@@ -1,19 +1,17 @@
-<sly data-sly-use.cta="coe.core.models.CTAButton">
-	<div id="${cta.componentId}" class="coe-cta-button ${cta.uniqueClassName} ${cta.alignment} ${cta.appearance}">
-		<sly data-sly-test.onclick = "return(modalTrigger('${cta.modalID}'))"/>
-		<a href="${cta.targetUrl}" target="${cta.target}" onclick="${cta.function == 'trigger' ? onclick : '' @ context ='html'}">
-			${cta.buttonText}
-			<sly data-sly-test="${cta.appearance == 'icon'}">
-				<span class="${cta.iconClass}"></span>
-			</sly>
+<div id="${properties.componentId}" class="coe-cta-button ${properties.uniqueClassName} ${properties.alignment} ${properties.appearance}">
+	<div data-sly-test.onclick = "return(modalTrigger('${properties.modalID}'))" data-sly-unwrap></div>
+	<a href="${properties.targetUrl}" target="${properties.target}" onclick="${properties.function == 'trigger' ? onclick : '' @ context ='html'}">
+		${properties.buttonText}
+		<sly data-sly-test="${properties.appearance == 'icon'}">
+			<span class="${properties.iconClass}"></span>
+		</sly>
 
-			<sly data-sly-test="${properties.buttonIcon}">
-				<span class="${properties.buttonIcon}"></span>
-			</sly>
-			<sly data-sly-test="${cta.ariaLabel}"><span class="sr-only">${cta.ariaLabel}</span></sly>
-		</a>
-	</div>
-</sly>
+		<sly data-sly-test="${properties.buttonIcon}">
+			<span class="${properties.buttonIcon}"></span>
+		</sly>
+		<sly data-sly-test="${properties.ariaLabel}"><span class="sr-only">${properties.ariaLabel}</span></sly>
+	</a>
+</div>
 <script>
 	function modalTrigger(compId)
 	{
