--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/clientlibs/css/ctabutton.css
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/clientlibs/css/ctabutton.css
@@ -18,7 +18,6 @@
     color:transparent;
 }
 .coe-cta-button.icon .right-arrow {
-    background-image: url(https://freesvg.org/img/kuba_arrow_button_set_2.png);
     display: inline-block;
     height: 60px;
     width: 60px;
@@ -28,8 +27,7 @@
     background-repeat: no-repeat;
 }
 
-.coe-cta-button span.right-arrow {
-    background-image: url(https://freesvg.org/img/kuba_arrow_button_set_2.png);
+.coe-cta-button .icon-as-button {
     display: inline-flex;
     height: 30px;
     width: 30px;
