--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/clientlibs/microsites/coe/css/site.css
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/clientlibs/microsites/coe/css/site.css
@@ -2,6 +2,15 @@
 .sr-only {
     display:none
 }
+/* Header */
+.header-logo-container {margin-top:10px;}
+header.experiencefragment .cmp-container {display:block}
+.header-util-nav .coe-cta-button.icon {margin-top:-15px; padding-right:10px;}
+#coe-header-nav ul {text-align:right;padding-right:50px;}
+#coe-header-nav li {display:inline-flex;white-space:nowrap;padding:15px 20px}
+header.experiencefragment a:hover {text-decoration:none}
+.header-nav-cta a:hover {color:#fff !important}
+
 /* COE CTA */
 /* for cta button type */
 .coe-cta-button.button a{
