--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/accordion-card/v1/accordion-card/clientlibs/css/accordioncard.css
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/accordion-card/v1/accordion-card/clientlibs/css/accordioncard.css
@@ -12,7 +12,7 @@
 .accordionCard-cta .down-arrow {
     width: 30px;
     height: 30px;
-    background-image: url(/content/dam/coe/icons/right-arrow.png);
+    background-image: url(/content/dam/coe/global-assets/right-arrow.png);
     background-size: contain;
     transform: rotate(90deg);
     margin:auto;
@@ -22,9 +22,9 @@
     display:none;
     width: 30px;
     height: 30px;
-    background-image: url(/content/dam/coe/icons/right-arrow.png);
+    background-image: url(/content/dam/coe/global-assets/right-arrow.png);
     background-size: contain;
     transform: rotate(270deg);
 	margin:auto;
 }
-
+.author-container {border:solid 1px red;}
