--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/clickableimage/v1/clickableimage/clickableimage.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/clickableimage/v1/clickableimage/clickableimage.html
@@ -1,19 +1,16 @@
 
-<div>hi i am clickable img</div>
+<sly data-sly-set.linkTarget="${climg.link && climg.linkTarget == 'true' ? '_blank' : ''}"/>
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html" data-sly-call="${clientlib.all @ categories=['clickImg']}" />
   <div data-sly-use.climg="coe.core.models.ClickableImageModel">
 
-           <h1>${properties.link}</h1>
-           <h1>${climg.linkTarget}</h1>
-           <h1>${climg.fileReference}</h1>
-           <h1>${climg.altText}</h1>
   <button 
-          type="${climg.link ? '' : 'button'}"
-          class="cmp-button"
-          href="${climg.link}"
-          rel="${climg.linkTarget == '_blank' ? 'noopener' : ''}"
-          target="${climg.linkTarget}"
-         >
+        data-sly-element="${climg.link ? 'a' : 'button'}"
+        type="${climg.link ? '' : 'button'}"
+        class="cmp-button"
+        href="${climg.link}"
+        rel="${climg.linkTarget == '_blank' ? 'noopener' : ''}"
+        target="${linkTarget}"
+        >
       <span data-sly-test="${climg.fileReference}"
         class="cmp-button-img">
       <img src="${climg.fileReference}"
