--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/intro-card/v1/intro-card/clientlibs/css/introCard.css
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/intro-card/v1/intro-card/clientlibs/css/introCard.css
@@ -9,33 +9,24 @@
      display: grid;
      width: 25%;
      align-items: start;
-     box-shadow: 0 5px 5px rgba(0,0,0,5);
-    background-color: #E8E8E8;
 }
  .grid-item{
-     background-color: #F5F5F5;
-     border-radius: 8px;
+     background-color: #F8F8F8;
      overflow: hidden;
-     box-shadow: 0 5px 5px rgba(0,0,0,5);
      cursor: pointer;
-     transition: 0.2s;
-}
- .grid-item:hover{
-     transform: translate(0.5%);
-     box-shadow: 0 5px 5px rgba(0,0,0,5);
 }
  .card-content{
-     padding: 2px;
+     padding: 15px;
+     background-color: #F8F8F8;
 }
  .card-header{
-    text-decoration: underline;
+     background-color: #F8F8F8;
      text-align: center;
-     font-weight: 500;
      color: black;
      margin-bottom: 10px;
 }
  .card-text{
-     text-align: justify;
+     text-align: center;
      padding: 5px;
      color: black;
      margin-bottom: 10px;
@@ -44,9 +35,12 @@
      text-decoration: none;
      text-align: center;
      display: block;
-     width: 94.6%;
      padding: 10px;
-     color: black;
-     background-color: 	#F8F8F8;
-     border-radius: 8px;
+     color: #F8F8F8;
+     display: grid;
+     background-color:#09138C;
+     margin: auto;
+}
+ .card-btn:hover{
+     color: #F8F8F8;
 }
