--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/cta.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/cta/v1/cta/cta.html
@@ -1,5 +1,13 @@
 <sly data-sly-use.cta="coe.core.models.CTAButton"></sly>
+<style>
+<sly data-sly-test="${cta.backgroundColor}">
+	.coe-cta-button.button a {background: ${cta.backgroundColor @context='html'} !important}
+</sly>
+<sly data-sly-test="${cta.fontColor}">
+	.coe-cta-button.button a {color: ${cta.fontColor @context='html'} !important}
+</sly>
 
+</style>
 <div id="${cta.componentId}" class="coe-cta-button ${cta.uniqueClassName} ${cta.alignment} ${cta.appearance}">
 	<div data-sly-test.onclick = "return(modalTrigger('#${cta.modalID}'))" data-sly-unwrap></div>
 	<a x-cq-linkchecker="skip" href="${cta.targetUrl} @context='html'" target="${cta.target}" onclick="${cta.function == 'trigger' ? onclick : '' @ context ='html'}">
