--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/accordion-card/v1/accordion-card/clientlibs/css/accordioncard.css
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/accordion-card/v1/accordion-card/clientlibs/css/accordioncard.css
@@ -16,6 +16,7 @@
     background-size: contain;
     transform: rotate(90deg);
     margin:auto;
+    cursor:pointer;
 }
 
 .accordionCard-cta .up-arrow {
@@ -26,6 +27,7 @@
     background-size: contain;
     transform: rotate(270deg);
 	margin:auto;
+    cursor:pointer;
 }
 .author-container {border:solid 1px red;}
 .test {test=demo}
