--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/intro-card/v1/intro-card/clientlibs/css/introCard.css
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/intro-card/v1/intro-card/clientlibs/css/introCard.css
@@ -1,37 +1,7 @@
-.outer{
-     font-family: sans-serif;
-     display: flex;
-     box-sizing: border-box;
+.coe__intro_card_card-header{
+     font-size:1.4rem;
 }
- .grid{
-     border-radius: 8px;
-     padding: 15px;
-     display: grid;
-     width: 25%;
-     align-items: start;
-}
- .grid-item{
-     background-color: #F8F8F8;
-     overflow: hidden;
-     cursor: pointer;
-}
- .card-content{
-     padding: 15px;
-     background-color: #F8F8F8;
-}
- .card-header{
-     background-color: #F8F8F8;
-     text-align: center;
-     color: black;
-     margin-bottom: 10px;
-}
- .card-text{
-     text-align: center;
-     padding: 5px;
-     color: black;
-     margin-bottom: 10px;
-}
- .card-btn{
+ .coe__intro_card_card-btn{
      text-decoration: none;
      text-align: center;
      display: block;
@@ -41,6 +11,12 @@
      background-color:#09138C;
      margin: auto;
 }
- .card-btn:hover{
+ .coe__intro_card_card-btn:hover{
      color: #F8F8F8;
+}
+ .coe__intro_card_card-content{
+    
+     width: 100%;
+     text-align: center;
+     padding:10px;
 }
