--- a/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/titleComponent/v1/titleComponent/titleComponent.html
+++ b/lti-coe/ui.apps/src/main/content/jcr_root/apps/coe/components/core/titleComponent/v1/titleComponent/titleComponent.html
@@ -1,7 +1,8 @@
+<sly data-sly-use.title="coe.core.models.TitleImpl"></sly>
 
-<div data-sly-use.title="coe.core.models.TitleImpl"></div>
+<div id="${title.componentId}" class="${title.classname}">
 
-<div data-sly-element="${title.type}">Title is : ${title.pageTitle}</div>
-<div>H tag used : ${title.type}</div>
+   <div data-sly-element="${title.type}">${title.pageTitle}</div>
+   
+</div>
 
-  
